---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: ????
  Features:
    - Added a global setting to change how normal messages are sent.
    - Added /t and /team commands to send messages normally.
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2024-10-21
  Changes:
    - Made compatible with 2.0
  Features:
    - You can now specify a shortcode variation (eg `:wood~1:`) for instances of conflicting shortcodes.
      A variation of 0 is the same as no variation.
    - Now, in singleplayer, replaces shortcodes within a levenshtein distance of 2 to account for typos. This does not work if you specify a variety other than 0 (the default)
      This is limited to singleplayer because it still hitches badly. I will gladly welcome people who know more than me optimizing it!
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2024-08-23
  Features:
    - A large portion of the Factorio Discord's emotes now have shortcodes available by default. Specifically the ones that are just in-game items.
    - You can now disable the 'closed' chat. This is intended to combat the latency issues with it without entirely removing it.
  Changes:
    - Now uses real migrations instead of jank on_configuration_changed migrations.
    - Default fade value is now 0.8 to at least show it exists.
  Commands:
    - Replicated /seed
    - Replicated /evolution
    - Replicated /time
    - Replicated /reply & /r
    - Replicated /color
  Bugfixes:
    - /w and /s now actually work
    - Whispering now can't crash if there's no recipient passed
    - Intentional ephemeral messages now actually replace system messages
    - Back to Back replaceables now work properly
    - Technology messages should be sent to all friendly forces, not every force except the one who unlocked it